chore: switched to uv

--- a/default.env
+++ b/default.env
@@ -1,6 +1,6 @@
 MIGRATE=yes
 DEBUG=True
-POSTGRES_DB=bzd
+POSTGRES_DB=bildzitate
 #POSTGRES_USER=postgres
 #POSTGRES_PASSWORD=postgres
 #POSTGRES_HOST=localhost
