--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "django-extensions>=4.1",
     "django-next-prev>=1.1.0",
     "django-spaghetti-and-meatballs>=0.4.2",
+    "gunicorn>=23.0.0",
     "jinja2>=3.1.6",
     "pandas>=2.3.3",
     "psycopg2-binary>=2.9.11",
