--- a/.github/workflows/starter.yaml
+++ b/.github/workflows/starter.yaml
@@ -14,7 +14,7 @@ jobs:
 # or see the switch on ref_name script below
       environment: ${{ steps.get_environment_from_git_ref.outputs.environment }}
       environment_short: ${{ steps.get_environment_from_git_ref.outputs.environment_short }}
-      image_name: bildzitate
+      image_name: pmbservice
 # Please note that the next line only works correctly with repositories that don't contain
 # upper case characters. If you have such a repo name please replace ${{ github.repository }}
 # with org/repo-name (all lower case).
@@ -23,10 +23,10 @@ jobs:
       default_port: "8020"
 # Usually you don't deal with all commits since the repository was created.
 # Increase if you e.g don't find a tag you want to display in the application
-      fetch-depth: 10
+      fetch-depth: "10"
       submodules: "true"
 #      herokuish_base_image: ghcr.io/acdh-oeaw/herokuish-for-cypress/main:latest-22
-      APP_NAME: bildzitate
+      APP_NAME: pmbservice
 # This together with the branch name is also used as the namespace to deploy to
       APP_ROOT: "/"     
       # SERVICE_ID: "99999" # Better use GtiHub environment variables for this
